--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- ===========================================================================
-Feel free to add your own header, but please don't remove ours
+Feel free to add your own header here, but please don't remove ours
  ___  _   _    _
 /   || | | |  | |
 \__  | | | |  | |  __
@@ -8,26 +8,26 @@ Feel free to add your own header, but please don't remove ours
 \___/|__/| \_/|__/\__/  /\_/
               |\
               |/
-Concrete v2.0.4
+Concrete v3.0.0
 https://github.com/Elkfox/Concrete
 Copyright (c) 2017 Elkfox Co Pty Ltd
 https://elkfox.com
 MIT License
 ============================================================================ -->
 <html lang="{{ shop.locale }}">
-  <head>
-    {% include 'meta-general' %}
-    {% include 'meta-social' %}
-    {% include 'meta-schema' %}
-    {% include 'style-tags' %}
-    {% include 'script-tags', layout: 'theme' %}
-    {{ content_for_header }}
-  </head>
-  <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}{% if template.suffix != null %} suffix-{{ template.suffix | handle }}{% endif %}">
-    {% section 'theme-header' %}
+<head>
+{% include 'meta-general' %}
+{% include 'meta-social' %}
+{% include 'meta-schema' %}
+{% include 'style-tags' %}
+{% include 'script-tags', layout: 'theme' %}
+{{ content_for_header }}
+</head>
+<body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}{% if template.suffix != null %} suffix-{{ template.suffix | handle }}{% endif %}">
+  {% section 'theme-header' %}
     <main role="main" id="MainContent">
       {{ content_for_layout }}
     </main>
-    {% section 'theme-footer' %}
-  </body>
+  {% section 'theme-footer' %}
+</body>
 </html>
