--- a/src/sections/theme-header.liquid
+++ b/src/sections/theme-header.liquid
@@ -2,17 +2,222 @@
 
 {%- comment -%}
   This is a required section for the Shopify Theme Store.
-  It is available in the "Header" section in the theme editor.
-
-  Theme Store required settings
-  - Show announcement
-  - Text: message to announce
-  - Link: link of the announcement bar
-
-  Theme Store optional settings
-  - Home page only: only shows on the home page
 {%- endcomment -%}
 
-<header role="banner">
+{% assign logo = section.settings.logo %}
+{% assign logo_width = section.settings.logo_max_width | append: 'x' %}
+{% assign h1 = false %}
+{% if template == 'index' or template == 'password' %}
+  {% assign h1 = true %}
+{% endif %}
 
-</header>
+<section data-section-id="{{ section.id }}" data-section-type="header">
+
+  {%- comment -%}
+    Announcement bar
+
+    Theme Store required settings
+    - Show announcement
+    - Text: message to announce
+    - Link: link of the announcement bar
+
+    Theme Store optional settings
+    - Home page only: only shows on the home page
+  {%- endcomment -%}
+  {% if section.settings.announcement_bar_enabled %}
+    <div>
+      {%- if section.settings.announcement_bar_home_page_only == false or template.name == 'index' -%}
+        {%- if section.settings.announcement_bar_link != blank -%}
+          <a href="{{ section.settings.announcement_bar_link }}">
+            {{ section.settings.announcement_bar_text | escape }}
+          </a>
+        {%- else -%}
+          <p>{{ section.settings.announcement_bar_text | escape }}</p>
+        {%- endif -%}
+      {%- endif -%}
+    </div>
+  {% endif %}
+
+  <header role="banner">
+
+    {%- comment -%}
+      Header logo
+    {%- endcomment -%}
+    {% if h1 %}
+      <h1>
+    {% else %}
+      <div class="h1">
+    {% endif %}
+      {% if logo != blank %}
+        <a href="/" title="{{ shop.name }}" class="logo-image">
+          <img src="{{ section.settings.logo | img_url: logo_width }}"
+               srcset="{{ section.settings.logo | img_url: logo_width }} 1x, {{ section.settings.logo | img_url: logo_width, scale: 2 }} 2x"
+               alt="{{ section.settings.logo.alt | default: shop.name }}">
+        </a>
+      {% else %}
+        <a href="/" title="{{ shop.name }}">{{ shop.name }}</a>
+      {% endif %}
+    {% if h1 %}
+      </h1>
+    {% else %}
+      </div>
+    {% endif %}
+
+    {%- comment -%}
+      Header cart link and item count
+    {%- endcomment -%}
+    <a href="/cart">
+      {{ 'cart.title' | t }}
+      ({{ cart.item_count }} {{ 'cart.item_count' | t: count: cart.item_count }})
+    </a>
+
+    {%- comment -%}
+      Header customer account links
+    {%- endcomment -%}
+    {% if shop.customer_accounts_enabled %}
+      <ul>
+        {% if customer %}
+          <li>
+            {%- if customer.first_name != blank %}
+              {% capture first_name %}<a href="/account">{{ customer.first_name }}</a>{% endcapture %}
+              {{ 'customer.logged_in_as_html' | t: first_name: first_name }}
+            {% else %}
+              <a href="/account">{{ 'layout.customer.account' | t }}</a>
+            {% endif -%}
+          </li>
+          <li>{{ 'customer.log_out' | t | customer_logout_link }}</li>
+        {% else %}
+          <li>{{ 'customer.log_in' | t | customer_login_link }}</li>
+          <li>{{ 'customer.create_account' | t | customer_register_link }}</li>
+        {% endif %}
+      </ul>
+    {% endif %}
+
+    {%- comment -%}
+      Header search form
+    {%- endcomment -%}
+    <form action="/search" method="get" role="search">
+      <label for="Search" class="label-hidden">
+        {{ 'search.title' | t }}
+      </label>
+
+      <input type="search"
+        name="q"
+        id="Search"
+        value="{{ search.terms | escape }}"
+        placeholder="{{ 'search.title' | t }}">
+
+      <button type="submit" class="btn">
+        {% comment %}{% include 'icon-search' %}{% endcomment %}
+        <span class="icon-fallback-text">{{ 'search.submit' | t }}</span>
+      </button>
+    </form>
+
+  </header>
+
+  {%- comment -%}
+    Main navigation menu
+  {%- endcomment -%}
+  <nav role="navigation">
+    <ul>
+      {% for link in linklists[section.settings.menu].links %}
+        {% if link.links != blank %}
+          <li>
+            <a href="{{ link.url }}">
+              {{ link.title }}
+              {% comment %}{% include 'icon-arrow-down' %}{% endcomment %}
+            </a>
+            <ul>
+              {% for childlink in link.links %}
+                <li>
+                  <a href="{{ childlink.url }}">
+                    {{ childlink.title }}
+                  </a>
+                </li>
+              {% endfor %}
+            </ul>
+          </li>
+        {% else %}
+          <li>
+            <a href="{{ link.url }}">
+              {{ link.title }}
+            </a>
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </nav>
+</section>
+
+{%- comment -%}
+  Additional section styles
+{%- endcomment -%}
+{% if section.settings.logo != blank %}
+  <style>
+    .logo-image {
+      display: block;
+      max-width: {{ section.settings.logo_max_width }}px;
+    }
+  </style>
+{% endif %}
+
+{% schema %}
+  {
+    "name": "Header",
+    "settings": [
+      {
+        "type": "header",
+        "content": "Announcement bar"
+      },
+      {
+        "type": "checkbox",
+        "id": "announcement_bar_enabled",
+        "label": "Show announcement",
+        "default": false
+      },
+      {
+        "type": "checkbox",
+        "id": "announcement_bar_home_page_only",
+        "label": "Show on home page only",
+        "default": true
+      },
+      {
+        "type": "text",
+        "id": "announcement_bar_text",
+        "label": "Announcement text",
+        "default": "Announce something here"
+      },
+      {
+        "type": "url",
+        "id": "announcement_bar_link",
+        "label": "Announcement link",
+        "info": "Optional"
+      },
+      {
+        "type": "header",
+        "content": "Header"
+      },
+      {
+        "type": "image_picker",
+        "id": "logo",
+        "label": "Logo image"
+      },
+      {
+        "type": "range",
+        "id": "logo_max_width",
+        "min": 50,
+        "max": 450,
+        "step": 10,
+        "unit": "px",
+        "label": "Custom logo width",
+        "default": 250
+      },
+      {
+        "type": "link_list",
+        "id": "menu",
+        "label": "Menu",
+        "default": "main-menu"
+      }
+    ]
+  }
+{% endschema %}
