--- a/src/snippets/meta-general.liquid
+++ b/src/snippets/meta-general.liquid
@@ -1,33 +1,29 @@
 <!-- snippets/meta-general.liquid -->
-
-{% assign title_divider = '&ndash;' %}
-
+{%- comment -%}
+  Note that the white space control in this file is intentional
+  Leaving the modifier off the beginning or end of certain tags
+  ensures the resulting rendered code is clean and neat
+{%- endcomment -%}
+{%- assign divider = ' &ndash; ' -%}
 {%- capture seo_title -%}
-  {{ page_title }}
-  {%- if current_tags -%}
-    {%- assign meta_tags = current_tags | join: ', ' -%} {{ title_divider }} {{ 'general.meta.tags' | t: tags: meta_tags -}}
-  {%- endif -%}
-  {%- if current_page != 1 -%}
-    {{ title_divider }} {{ 'general.meta.page' | t: page: current_page }}
-  {%- endif -%}
+  {{- page_title -}}
+  {%- if current_tags -%}{%- assign meta_tags = current_tags | join: ', ' -%}{{ divider }}{{- 'common.meta.tags' | t: tags: meta_tags -}}{%- endif -%}
+  {%- if current_page != 1 -%}{{ divider }}{{ 'common.meta.page' | t: page: current_page -}}{%- endif -%}
   {%- assign escaped_page_title = page_title | escape -%}
-  {%- unless escaped_page_title contains shop.name -%}
-    {{ title_divider }} {{ shop.name }}
-  {%- endunless -%}
-{%- endcapture -%}
-
+  {%- unless escaped_page_title contains shop.name -%}{{ divider }}{{- shop.name -}}{%- endunless -%}
+{%- endcapture %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="theme-color" content="">
-<link rel="canonical" href="{{ canonical_url }}">
-
-{%- if settings.favicon != blank -%}
-  <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
-{%- endif -%}
-
 <title>{{ seo_title | strip }}</title>
-
-{%- if page_description -%}
-  <meta name="description" content="{{ page_description | escape }}">
-{%- endif -%}
+{% if page_description -%}
+<meta name="description" content="{{ page_description | escape }}">
+{% endif -%}
+<link rel="canonical" href="{{ canonical_url }}">
+<meta name="theme-color" content="{{ settings.color_brand }}">
+{% if settings.favicon != blank -%}
+<link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
+<link rel="icon" sizes="192x192" href="{{ settings.favicon | img_url: '192x192' }}">
+<link rel="apple-touch-icon" href="{{ settings.favicon | img_url: '152x152' }}">
+<meta name="msapplication-square310x310logo" content="{{ settings.favicon | img_url: '310x310' }}">
+{% endif -%}
