--- a/src/sections/theme-footer.liquid
+++ b/src/sections/theme-footer.liquid
@@ -1,5 +1,6 @@
 <!-- section/theme-footer.liquid -->
 
-<footer>
-
+<footer class="container l">
+  <hr>
+  <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}. {{ powered_by_link }}</small>
 </footer>
