--- a/src/assets/styles/global/grid50.scss
+++ b/src/assets/styles/global/grid50.scss
@@ -1,8 +1,6 @@
 /* Grid50 Variables ==========================================================*/
 
-// Spacing
-$spacing: 10px;
-$gutter: $spacing*5;
+$gutter: 50px;
 
 // Screen Sizes
 $s: 600px;
